Trying to correct Nav Bar on h1 and links alignment

--- a/css/index.css
+++ b/css/index.css
@@ -185,6 +185,7 @@ img {
   border-bottom: 2px dashed #C0C0C0;
 }
 .navigation h1 {
+  width: 30%;
   margin: 0 20%;
   display: flex;
   justify-content: space-between;
@@ -198,6 +199,8 @@ img {
 }
 .navigation li {
   font-size: 1.6em;
+  display: flex;
+  justify-content: space-between;
 }
 .navigation li a {
   text-decoration: none;
@@ -215,7 +218,6 @@ img {
   padding: 20px;
 }
 .home .header-section {
-  margin: 10px 0;
   border-bottom: 2px dashed #C0C0C0;
 }
 .home .header-section img {
