--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,5 @@
 .home {
   .header-section {
-    margin: 10px 0;
     border-bottom: 2px dashed @navigation-border;
 
     img {
