--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,8 +2,9 @@
 .navigation {
     width: 100%;
     border-bottom: 2px dashed @navigation-border;
-        
+            
     h1 {
+        width: 30%;
         margin: 0 20%;
         display: flex;
         justify-content: space-between;
@@ -18,6 +19,8 @@
 
     li {
         font-size: 1.6em;
+        display: flex;
+        justify-content: space-between;
     }
 
     li a {
